# sendgrid

./: LICENSE  sendgrid.cabal
src/Network/Mail/: SendGrid.hs
