name:                sendgrid
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jsteiner/sendgrid#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Steiner
maintainer:          josh@jsteiner.me
copyright:           2016 Josh Steiner
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsteiner/sendgrid
